Config file updated

--- a/config.ini
+++ b/config.ini
@@ -4,9 +4,12 @@ email =
 port = 587
 password =
 user_email =
+subject = Notices ETFBL
+text = You can find ETFBL notices attached in a json file.
 
 [SCRAPER]
 website = https://efee.etf.unibl.org/oglasi/
 latest_fetch =
 web_driver = CHROME
 notices = notices.json
+dt_format = %%d.%%m.%%Y %%H:%%M:%%S
